fix: checklist handle change, checklist scrollbar; chore: separate SearchPage

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,4 @@
 .App {
-  width: 100vw;
   height: 100vh;
 }
 
@@ -7,3 +6,9 @@ body {
   margin: 0;
   padding: 0;
 }
+
+.main{
+  display: flex;
+}
+
+
